<resources>
    <string name="app_name">App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="notifications">Notifications</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="email_id">Email ID</string>
    <string name="menu_rewards">My Rewards</string>
    <string name="menu_wishlist">My Wishlist</string>
    <string name="menu_orders">My Orders</string>
    <string name="menu_account">My Account</string>
    <string name="todo">TODO</string>
    <string name="products_of_the_day">Products of the Day!</string>
    <string name="view_all">View ALl</string>

    <string name="sliderHead1">No. 1 Online Shop</string>
    <string name="sliderHead2">Awesome Variety!</string>
    <string name="sliderHead3">Sit and Relax</string>

    <string name="sliderDes1">India best shop for buying glasses according to your need</string>
    <string name="sliderDes2">A Place where you find everything with best Quality</string>
    <string name="sliderDes3">Just select your product and get earliest</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="order">Order</string>
    <string name="checkout">Checkout</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="payment_using_credit_card">Payment Using Credit Card</string>
    <string name="credit_card">Credit Card</string>
    <string name="number">Number</string>
    <string name="date">Date</string>
    <string name="cvv">CVV</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="payment_using_gpay">Payment Using GPay</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="last_name">Last Name</string>
    <string name="postal_code">Postal Code</string>
    <string name="first_name">First Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="shipping_methods">Shipping Methods</string>
    <string name="standard_shipping">Standard Shipping</string>
    <string name="premium_shipping">Premium Shipping</string>
    <string name="payment_details">Payment Details</string>
    <string name="add_address">Add Address</string>
    <string name="use_saved_address">Use Saved Address</string>
    <string name="or">OR</string>
    <string name="shipping_address_toolbar">Shipping Address</string>
    <string name="address_saved">Address</string>
    <string name="pincode">Pincode</string>
    <string name="full_name">Full Name</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="net_banking">Net Banking</string>
    <string name="upi_method">UPI method</string>
    <string name="paytm_method">Paytm method</string>
    <string name="proceed">Proceed</string>
</resources>