<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/nav_bag"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/nav_reward"
            android:title="@string/menu_rewards" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/nav_wishlist"
            android:title="@string/menu_wishlist" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/nav_account"
            android:title="@string/menu_account" />
    </group>
    <item
        android:id="@+id/nav_signout"
        android:icon="@drawable/nav_signout"
        android:title="Sign Out" />

</menu>