<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/action_search"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_notification"
        android:orderInCategory="100"
        android:icon="@drawable/action_notification"
        android:title="@string/notifications"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_cart"
        android:orderInCategory="100"
        android:icon="@drawable/action_cart"
        android:title="@string/cart"
        app:showAsAction="always" />
</menu>