<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/payment_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="249dp"
        android:background="@drawable/slider_background"
        android:backgroundTint="@color/galaxy_blue"
        android:elevation="3dp"
        android:padding="8dp"
        android:text="@string/payment_methods"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroyregular"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/credit_card_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/payment_using_credit_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_method"
        app:srcCompat="@drawable/credit_card" />

    <TextView
        android:id="@+id/credit_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/slider_background"
        android:padding="8dp"
        android:text="@string/credit_card"
        android:textColor="@color/galaxy_blue"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/credit_card_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_method" />

    <EditText
        android:id="@+id/card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:hint="@string/number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/credit_card_image"
        app:layout_constraintEnd_toEndOf="@+id/credit_card_image"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="@+id/credit_card_image"
        app:layout_constraintTop_toTopOf="@+id/credit_card_image"
        app:layout_constraintVertical_bias="0.422" />

    <EditText
        android:id="@+id/card_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:hint="@string/date"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/credit_card_image"
        app:layout_constraintEnd_toEndOf="@+id/credit_card_image"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="@+id/credit_card_image"
        app:layout_constraintTop_toBottomOf="@+id/card_number"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/card_cvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="2"
        android:hint="@string/cvv"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/credit_card_image"
        app:layout_constraintStart_toEndOf="@+id/card_date"
        app:layout_constraintTop_toBottomOf="@+id/card_number"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="145dp"
        android:background="@drawable/slider_background"
        android:padding="8dp"
        android:text="@string/cash_on_delivery"
        android:textColor="@color/galaxy_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/radioGroup_payment"
        app:layout_constraintTop_toBottomOf="@+id/credit_card_image" />

    <ImageView
        android:id="@+id/g_pay"
        android:layout_width="155dp"
        android:layout_height="59dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="128dp"
        android:background="@drawable/slider_background"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/upi_method"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/radioGroup_payment"
        app:layout_constraintTop_toBottomOf="@+id/cod"
        app:srcCompat="@drawable/upi" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="164dp"
        android:contentDescription="@string/paytm_method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup_payment"
        app:layout_constraintTop_toBottomOf="@+id/g_pay"
        app:srcCompat="@drawable/paytm" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="160dp"
        android:background="@drawable/slider_background"
        android:backgroundTint="@color/white"
        android:padding="8dp"
        android:text="@string/net_banking"
        android:textColor="@color/galaxy_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <RadioGroup
        android:id="@+id/radioGroup_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toStartOf="@+id/credit_card_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_method">

        <RadioButton
            android:id="@+id/credit_card_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/cod_btn"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_marginTop="40dp" />

        <RadioButton
            android:id="@+id/upi_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <RadioButton
            android:id="@+id/paytm_btn"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="40dp" />

        <RadioButton
            android:id="@+id/net_banking_btn"
            android:layout_width="wrap_content"
            android:layout_height="100dp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>